--- a/me.html
+++ b/me.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Profile - Finance Point</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -24,170 +24,185 @@
       top: 0;
       z-index: 1000;
     }
-    header h1 {
-      font-size: 1.8rem;
+    h1 {
+      font-size: 1.5rem;
     }
     .nav-container {
-      background: #111;
-      padding: 10px;
       display: flex;
       justify-content: center;
+      gap: 10px;
       flex-wrap: wrap;
-      gap: 8px;
+      background: #111;
+      padding: 10px;
       border-bottom: 2px solid gold;
     }
     .nav-container a {
       color: gold;
       text-decoration: none;
-      font-weight: bold;
-      background: rgba(50, 50, 50, 0.85);
-      padding: 8px 14px;
-      border-radius: 8px;
+      padding: 8px 16px;
+      border-radius: 6px;
+      background: #222;
       transition: 0.3s;
+      font-weight: bold;
     }
     .nav-container a.active {
       background: gold;
       color: black;
       pointer-events: none;
     }
+
     .container {
-      max-width: 800px;
-      margin: auto;
-      padding: 30px 20px;
-    }
-    .profile-box {
-      background: rgba(20, 20, 20, 0.9);
+      max-width: 500px;
+      margin: 30px auto;
+      background: rgba(20, 20, 20, 0.95);
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 12px gold;
+      box-shadow: 0 0 10px gold;
       text-align: center;
     }
-    .profile-box img {
-      width: 100px;
-      height: 100px;
+
+    .profile-img {
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
       object-fit: cover;
       border: 2px solid gold;
-      margin-bottom: 10px;
-    }
-    .profile-box h2, .profile-box p {
-      margin: 10px 0;
-    }
-    .leaderboard-box {
-      margin-top: 30px;
-      background: rgba(0, 0, 0, 0.85);
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 0 8px rgba(255, 215, 0, 0.4);
-    }
-    .leaderboard-box h3 {
       margin-bottom: 15px;
-      border-bottom: 1px solid gold;
-      padding-bottom: 5px;
-      text-align: center;
     }
-    .logout-btn {
+
+    .info-box {
+      margin-bottom: 15px;
+      padding: 10px;
+      border: 1px dashed gold;
+      border-radius: 6px;
+      background: rgba(0,0,0,0.4);
+    }
+
+    .info-box strong {
+      display: block;
+      font-size: 1.1rem;
+      margin-bottom: 5px;
+    }
+
+    .btn-settings {
       display: inline-block;
-      margin-top: 20px;
-      padding: 10px 16px;
-      background: darkred;
-      color: white;
+      margin: 10px;
+      padding: 8px 14px;
+      background: gold;
+      color: black;
       font-weight: bold;
+      border-radius: 5px;
+      text-decoration: none;
+    }
+
+    .logout-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: crimson;
+      color: white;
       border: none;
+      padding: 10px 16px;
       border-radius: 6px;
       cursor: pointer;
+      font-weight: bold;
+    }
+
+    .leaderboard-box {
+      margin-top: 20px;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid gold;
+      border-radius: 6px;
+      padding: 10px;
     }
   </style>
 </head>
 <body>
-<header>
-  <h1>FINANCE POINT</h1>
-  <i class="fas fa-cog logout-icon" onclick="window.location.href='settings.html'" title="Settings"></i>
-</header>
-<div class="nav-container" id="topNav"></div>
-<div class="container">
-  <div class="profile-box">
-    <img id="profilePic" src="https://via.placeholder.com/100" alt="Profile Picture"/>
-    <h2 id="userName">Student Name</h2>
-    <p id="userMatric">Matric Number</p>
+  <header>
+    <h1>FINANCE POINT</h1>
+  </header>
+
+  <div class="nav-container">
+    <a href="home.html">Home</a>
+    <a href="announcement-events.html">Announcements</a>
+    <a href="downloads.html">Downloads</a>
+    <a href="cbt.html">CBT</a>
+    <a href="leaderboard.html">Leaderboard</a>
+    <a href="feedback.html">Feedback</a>
+    <a href="lostfound.html">Lost & Found</a>
+    <a href="me.html" class="active">Me</a>
   </div>
-  <div class="leaderboard-box">
-    <h3>Leaderboard Stats</h3>
-    <p><strong>CBT Rank:</strong> <span id="userRank">Loading...</span></p>
-    <p><strong>Total Score:</strong> <span id="userScore">0</span></p>
+
+  <div class="container">
+    <img id="profilePic" class="profile-img" src="https://i.imgur.com/nq3Z1Yz.png" alt="Profile" />
+    <div class="info-box">
+      <strong id="fullName">Full Name</strong>
+      <span id="matricNum">Matric Number</span>
+    </div>
+    <div class="info-box">
+      <strong>Email</strong>
+      <span id="emailText">user@example.com</span>
+    </div>
+    <a href="settings.html" class="btn-settings"><i class="fas fa-cog"></i> Edit Profile</a>
+
+    <div class="leaderboard-box" id="leaderboardInfo">
+      🏆 You are currently in the Top 10! Keep it up!
+    </div>
   </div>
-  <button class="logout-btn" onclick="logoutUser()">Logout</button>
-</div>
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-  import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-  import { getFirestore, doc, getDoc, collection, query, orderBy, limit, getDocs } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-    authDomain: "finsa-connect.firebaseapp.com",
-    projectId: "finsa-connect",
-    storageBucket: "finsa-connect.appspot.com",
-    messagingSenderId: "126845965255",
-    appId: "1:126845965255:web:c82539297a8464873d7fe2"
-  };
+  <button class="logout-btn" onclick="logoutUser()">
+    <i class="fas fa-sign-out-alt"></i> Logout
+  </button>
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const db = getFirestore(app);
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { getFirestore, doc, getDoc, collection, query, orderBy, limit, getDocs } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-  const nameEl = document.getElementById("userName");
-  const matricEl = document.getElementById("userMatric");
-  const picEl = document.getElementById("profilePic");
-  const rankEl = document.getElementById("userRank");
-  const scoreEl = document.getElementById("userScore");
+    const firebaseConfig = {
+      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
+      authDomain: "finsa-connect.firebaseapp.com",
+      projectId: "finsa-connect",
+      storageBucket: "finsa-connect.appspot.com",
+      messagingSenderId: "126845965255",
+      appId: "1:126845965255:web:c82539297a8464873d7fe2"
+    };
 
-  async function loadUserProfile(user) {
-    const userRef = doc(db, "users", user.uid);
-    const userSnap = await getDoc(userRef);
-    if (userSnap.exists()) {
-      const data = userSnap.data();
-      nameEl.textContent = data.fullName || "Student Name";
-      matricEl.textContent = data.matricNumber || "Matric Number";
-      if (data.profileURL) picEl.src = data.profileURL;
-    }
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
 
-    // Get leaderboard
-    const q = query(collection(db, "cbt_scores"), orderBy("score", "desc"));
-    const allScores = await getDocs(q);
-    let rank = 1;
-    allScores.forEach(docSnap => {
-      const s = docSnap.data();
-      if (s.userId === user.uid) {
-        scoreEl.textContent = s.score;
-        rankEl.textContent = rank;
-      } else {
-        rank++;
+    const fullNameEl = document.getElementById("fullName");
+    const matricNumEl = document.getElementById("matricNum");
+    const emailEl = document.getElementById("emailText");
+    const profilePic = document.getElementById("profilePic");
+    const leaderboardInfo = document.getElementById("leaderboardInfo");
+
+    onAuthStateChanged(auth, async (user) => {
+      if (!user) return window.location.href = "login.html";
+
+      const userDoc = await getDoc(doc(db, "users", user.uid));
+      if (userDoc.exists()) {
+        const data = userDoc.data();
+        fullNameEl.textContent = data.fullName || "User";
+        matricNumEl.textContent = data.matricNumber || "Not Available";
+        emailEl.textContent = user.email || "No Email";
+        profilePic.src = data.photoURL || "https://i.imgur.com/nq3Z1Yz.png";
+      }
+
+      // Fetch leaderboard position (mock logic)
+      const scoresRef = collection(db, "cbt_scores");
+      const q = query(scoresRef, orderBy("score", "desc"), limit(10));
+      const topScores = await getDocs(q);
+      const topUserIds = topScores.docs.map(doc => doc.data().userId);
+      if (!topUserIds.includes(user.uid)) {
+        leaderboardInfo.innerHTML = "📉 You are not in the Top 10 yet. Keep practicing!";
       }
     });
-  }
 
-  onAuthStateChanged(auth, user => {
-    if (!user) return window.location.href = "login.html";
-    loadUserProfile(user);
-  });
-
-  window.logoutUser = function () {
-    signOut(auth).then(() => window.location.href = "login.html");
-  };
-
-  // Load nav
-  fetch("nav.html")
-    .then(res => res.text())
-    .then(html => {
-      document.getElementById("topNav").innerHTML = html;
-      const current = window.location.pathname.split("/").pop();
-      document.querySelectorAll(".nav-container a").forEach(link => {
-        if (link.getAttribute("href") === current) {
-          link.classList.add("active");
-        }
-      });
-    });
-</script>
+    window.logoutUser = function () {
+      signOut(auth).then(() => window.location.href = "login.html");
+    };
+  </script>
 </body>
 </html>
