--- a/settings.html
+++ b/settings.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Settings - Finance Point</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -14,17 +13,19 @@
       padding: 0;
     }
     header {
-      background: rgba(20, 20, 20, 0.95);
-      padding: 15px 20px;
+      background-color: rgba(20, 20, 20, 0.95);
       display: flex;
       justify-content: space-between;
       align-items: center;
+      padding: 15px 20px;
       box-shadow: 0 0 10px gold;
       position: sticky;
       top: 0;
       z-index: 1000;
     }
-    h1 { font-size: 1.5rem; }
+    h1 {
+      font-size: 1.5rem;
+    }
     .nav-container {
       display: flex;
       justify-content: center;
@@ -51,21 +52,18 @@
     .container {
       max-width: 500px;
       margin: 30px auto;
-      background: rgba(20, 20, 20, 0.9);
+      background: rgba(20, 20, 20, 0.95);
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 0 10px gold;
     }
-    .container h2 {
-      text-align: center;
+    .form-group {
       margin-bottom: 20px;
     }
     label {
       display: block;
-      margin-top: 15px;
-      font-weight: bold;
+      margin-bottom: 5px;
     }
-    input[type="text"],
     input[type="email"] {
       width: 100%;
       padding: 10px;
@@ -74,159 +72,151 @@
       background: #111;
       color: gold;
     }
-    input[readonly] {
-      opacity: 0.6;
+    .profile-pic {
+      display: flex;
+      align-items: center;
+      gap: 15px;
     }
-    #photoInput {
+    .profile-pic img {
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 2px solid gold;
+    }
+    .profile-pic input[type="file"] {
       display: none;
     }
-    #preview {
-      display: block;
-      margin: 10px auto;
-      width: 120px;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 50%;
-      border: 2px solid gold;
-      cursor: pointer;
-    }
-    #preview:hover {
-      box-shadow: 0 0 10px gold;
-    }
-    button {
-      margin-top: 20px;
-      padding: 10px 16px;
-      width: 100%;
+    .custom-upload {
       background: gold;
       color: black;
+      padding: 8px 12px;
+      border-radius: 5px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .btn-save {
+      background: gold;
+      color: black;
+      padding: 10px 16px;
+      font-size: 1rem;
       border: none;
       border-radius: 6px;
-      font-size: 1rem;
       cursor: pointer;
+      font-weight: bold;
+    }
+    .logout-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: crimson;
+      color: white;
+      border: none;
+      padding: 10px 16px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-
-<header>
-  <h1>FINANCE POINT</h1>
-</header>
-
-<div class="nav-container">
-  <a href="home.html">Home</a>
-  <a href="announcement-events.html">Announcements</a>
-  <a href="downloads.html">Downloads</a>
-  <a href="cbt.html">CBT</a>
-  <a href="leaderboard.html">Leaderboard</a>
-  <a href="feedback.html">Feedback</a>
-  <a href="lostfound.html">Lost & Found</a>
-  <a href="me.html">Me</a>
-  <a href="settings.html" class="active">Settings</a>
+  <header>
+    <h1>FINANCE POINT</h1>
+  </header>  <div class="nav-container">
+    <a href="home.html">Home</a>
+    <a href="announcement-events.html">Announcements</a>
+    <a href="downloads.html">Downloads</a>
+    <a href="cbt.html">CBT</a>
+    <a href="leaderboard.html">Leaderboard</a>
+    <a href="feedback.html">Feedback</a>
+    <a href="lostfound.html">Lost & Found</a>
+    <a href="me.html">Me</a>
+  </div>  <div class="container">
+    <div class="form-group">
+      <label>Email</label>
+      <input type="email" id="emailInput" />
+    </div><div class="form-group profile-pic">
+  <img id="profileImage" src="https://i.imgur.com/nq3Z1Yz.png" alt="Profile" />
+  <label class="custom-upload">
+    Change Picture
+    <input type="file" id="imageUpload" accept="image/*" />
+  </label>
 </div>
 
-<div class="container">
-  <h2>Update Profile</h2>
-  <label>Full Name</label>
-  <input type="text" id="name" readonly />
+<button class="btn-save" onclick="saveChanges()">Save Changes</button>
 
-  <label>Matric Number</label>
-  <input type="text" id="matric" readonly />
+  </div>  <button class="logout-btn" onclick="logoutUser()">
+    <i class="fas fa-sign-out-alt"></i> Logout
+  </button>  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getAuth, signOut, onAuthStateChanged, updateEmail } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { getFirestore, doc, getDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-storage.js";
 
-  <label>Email</label>
-  <input type="email" id="email" />
+    const firebaseConfig = {
+      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
+      authDomain: "finsa-connect.firebaseapp.com",
+      projectId: "finsa-connect",
+      storageBucket: "finsa-connect.appspot.com",
+      messagingSenderId: "126845965255",
+      appId: "1:126845965255:web:c82539297a8464873d7fe2"
+    };
 
-  <label>Tap the image to change profile picture</label>
-  <input type="file" id="photoInput" accept="image/*" />
-  <img id="preview" src="https://i.imgur.com/nq3Z1Yz.png" alt="Profile" />
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+    const storage = getStorage(app);
 
-  <button id="saveBtn">Save Changes</button>
-</div>
+    let currentUser = null;
+    let newImageFile = null;
 
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-  import { getAuth, onAuthStateChanged, updateEmail } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-  import { getFirestore, doc, getDoc, updateDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
-  import { getStorage, ref as sRef, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-storage.js";
+    const emailInput = document.getElementById("emailInput");
+    const profileImage = document.getElementById("profileImage");
+    const imageUpload = document.getElementById("imageUpload");
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-    authDomain: "finsa-connect.firebaseapp.com",
-    projectId: "finsa-connect",
-    storageBucket: "finsa-connect.appspot.com",
-    messagingSenderId: "126845965255",
-    appId: "1:126845965255:web:c82539297a8464873d7fe2"
-  };
-
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const db = getFirestore(app);
-  const storage = getStorage(app);
-
-  const nameField = document.getElementById("name");
-  const matricField = document.getElementById("matric");
-  const emailField = document.getElementById("email");
-  const photoInput = document.getElementById("photoInput");
-  const preview = document.getElementById("preview");
-  const saveBtn = document.getElementById("saveBtn");
-
-  let currentUser;
-  let currentPhotoURL = "";
-
-  // Preview click opens file dialog
-  preview.addEventListener("click", () => photoInput.click());
-
-  // Load user info
-  onAuthStateChanged(auth, async (user) => {
-    if (!user) return window.location.href = "login.html";
-    currentUser = user;
-
-    const docRef = doc(db, "users", user.uid);
-    const docSnap = await getDoc(docRef);
-    if (docSnap.exists()) {
-      const data = docSnap.data();
-      nameField.value = data.fullName || "";
-      matricField.value = data.matricNumber || "";
-      emailField.value = user.email || "";
-      currentPhotoURL = data.photoURL || "https://i.imgur.com/nq3Z1Yz.png";
-      preview.src = currentPhotoURL;
-    }
-  });
-
-  saveBtn.addEventListener("click", async () => {
-    if (!currentUser) return;
-
-    const newEmail = emailField.value.trim();
-    const file = photoInput.files[0];
-    let newPhotoURL = currentPhotoURL;
-
-    // Upload photo if selected
-    if (file) {
-      const imgRef = sRef(storage, `profile_pictures/${currentUser.uid}`);
-      await uploadBytes(imgRef, file);
-      newPhotoURL = await getDownloadURL(imgRef);
-    }
-
-    // Update Firestore
-    await updateDoc(doc(db, "users", currentUser.uid), {
-      photoURL: newPhotoURL
+    onAuthStateChanged(auth, async (user) => {
+      if (!user) return window.location.href = "login.html";
+      currentUser = user;
+      const docSnap = await getDoc(doc(db, "users", user.uid));
+      if (docSnap.exists()) {
+        const data = docSnap.data();
+        emailInput.value = user.email;
+        profileImage.src = data.photoURL || "https://i.imgur.com/nq3Z1Yz.png";
+      }
     });
 
-    // Update email
-    if (newEmail !== currentUser.email) {
-      await updateEmail(currentUser, newEmail).catch(err => alert("Error: " + err.message));
-    }
+    imageUpload.addEventListener("change", (e) => {
+      newImageFile = e.target.files[0];
+      if (newImageFile) {
+        profileImage.src = URL.createObjectURL(newImageFile);
+      }
+    });
 
-    alert("Profile updated!");
-    location.reload();
-  });
+    window.saveChanges = async () => {
+      if (!currentUser) return;
+      const newEmail = emailInput.value;
+      try {
+        if (newEmail !== currentUser.email) {
+          await updateEmail(currentUser, newEmail);
+        }
 
-  // Show preview of selected file
-  photoInput.addEventListener("change", () => {
-    const file = photoInput.files[0];
-    if (file) {
-      preview.src = URL.createObjectURL(file);
-    }
-  });
-</script>
-</body>
+        let photoURL = profileImage.src;
+        if (newImageFile) {
+          const storageRef = ref(storage, `profile_pics/${currentUser.uid}`);
+          await uploadBytes(storageRef, newImageFile);
+          photoURL = await getDownloadURL(storageRef);
+        }
+
+        await updateDoc(doc(db, "users", currentUser.uid), { photoURL });
+
+        alert("Changes saved successfully!");
+      } catch (err) {
+        alert("Error saving changes: " + err.message);
+      }
+    };
+
+    window.logoutUser = function () {
+      signOut(auth).then(() => window.location.href = "login.html");
+    };
+  </script></body>
 </html>
