--- a/me.html
+++ b/me.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Profile - Finance Point</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -24,105 +23,92 @@
       top: 0;
       z-index: 1000;
     }
-    h1 {
-      font-size: 1.5rem;
+    header h1 {
+      font-size: 1.8rem;
     }
     .nav-container {
+      background: #111;
+      padding: 10px;
       display: flex;
       justify-content: center;
       gap: 10px;
-      flex-wrap: wrap;
-      background: #111;
-      padding: 10px;
       border-bottom: 2px solid gold;
+      flex-wrap: wrap;
     }
     .nav-container a {
       color: gold;
       text-decoration: none;
-      padding: 8px 16px;
-      border-radius: 6px;
-      background: #222;
-      transition: 0.3s;
       font-weight: bold;
+      padding: 6px 12px;
+      border-radius: 6px;
+      background-color: #222;
     }
     .nav-container a.active {
       background: gold;
       color: black;
       pointer-events: none;
     }
-
     .container {
-      max-width: 500px;
-      margin: 30px auto;
-      background: rgba(20, 20, 20, 0.95);
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+    .profile-box {
+      background: rgba(20, 20, 20, 0.85);
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 0 10px gold;
-      text-align: center;
+      margin-bottom: 20px;
     }
-
-    .profile-img {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 2px solid gold;
-      margin-bottom: 15px;
-    }
-
-    .info-box {
-      margin-bottom: 15px;
-      padding: 10px;
-      border: 1px dashed gold;
-      border-radius: 6px;
-      background: rgba(0,0,0,0.4);
-    }
-
-    .info-box strong {
+    label {
       display: block;
-      font-size: 1.1rem;
       margin-bottom: 5px;
+      font-weight: bold;
     }
-
-    .btn-settings {
-      display: inline-block;
-      margin: 10px;
-      padding: 8px 14px;
+    input {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border-radius: 6px;
+      border: 1px solid gold;
+      background: #111;
+      color: gold;
+    }
+    input[readonly] {
+      opacity: 0.7;
+    }
+    .info-note {
+      font-size: 0.9rem;
+      color: #ccc;
+      margin-top: -10px;
+      margin-bottom: 15px;
+    }
+    .btn {
       background: gold;
       color: black;
-      font-weight: bold;
-      border-radius: 5px;
-      text-decoration: none;
-    }
-
-    .logout-btn {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: crimson;
-      color: white;
       border: none;
       padding: 10px 16px;
+      font-weight: bold;
       border-radius: 6px;
       cursor: pointer;
-      font-weight: bold;
     }
-
-    .leaderboard-box {
+    .logout-btn {
+      float: right;
       margin-top: 20px;
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid gold;
-      border-radius: 6px;
-      padding: 10px;
+    }
+    .leaderboard {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px gold;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>FINANCE POINT</h1>
-  </header>
-
-  <div class="nav-container">
+    <a href="me.html"><img src="https://i.imgur.com/3yAfXZC.jpg" alt="profile" style="width: 35px; height: 35px; border-radius: 50%;"></a>
+  </header>  <div class="nav-container">
     <a href="home.html">Home</a>
     <a href="announcement-events.html">Announcements</a>
     <a href="downloads.html">Downloads</a>
@@ -131,33 +117,31 @@
     <a href="feedback.html">Feedback</a>
     <a href="lostfound.html">Lost & Found</a>
     <a href="me.html" class="active">Me</a>
-  </div>
+  </div>  <div class="container">
+    <div class="profile-box">
+      <h2>My Profile</h2>
+      <label>Full Name</label>
+      <input type="text" id="name" readonly>
+      <div class="info-note">These fields cannot be changed. Kindly contact the department PRO directly for assistance.</div><label>Matric Number</label>
+  <input type="text" id="matric" readonly>
 
-  <div class="container">
-    <img id="profilePic" class="profile-img" src="https://i.imgur.com/nq3Z1Yz.png" alt="Profile" />
-    <div class="info-box">
-      <strong id="fullName">Full Name</strong>
-      <span id="matricNum">Matric Number</span>
-    </div>
-    <div class="info-box">
-      <strong>Email</strong>
-      <span id="emailText">user@example.com</span>
-    </div>
-    <a href="settings.html" class="btn-settings"><i class="fas fa-cog"></i> Edit Profile</a>
+  <label>Email</label>
+  <input type="email" id="email">
 
-    <div class="leaderboard-box" id="leaderboardInfo">
-      🏆 You are currently in the Top 10! Keep it up!
-    </div>
-  </div>
+  <button class="btn" onclick="saveEmail()">Save Changes</button>
 
-  <button class="logout-btn" onclick="logoutUser()">
-    <i class="fas fa-sign-out-alt"></i> Logout
-  </button>
+  <button class="btn logout-btn" onclick="logoutUser()">Logout</button>
+</div>
 
-  <script type="module">
+<div class="leaderboard">
+  <h3>Your CBT Performance</h3>
+  <p id="scoreDetails">Loading...</p>
+</div>
+
+  </div>  <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-    import { getFirestore, doc, getDoc, collection, query, orderBy, limit, getDocs } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { getFirestore, doc, getDoc, updateDoc, collection, query, where, getDocs, orderBy } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
@@ -172,37 +156,42 @@
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    const fullNameEl = document.getElementById("fullName");
-    const matricNumEl = document.getElementById("matricNum");
-    const emailEl = document.getElementById("emailText");
-    const profilePic = document.getElementById("profilePic");
-    const leaderboardInfo = document.getElementById("leaderboardInfo");
+    let userId;
 
     onAuthStateChanged(auth, async (user) => {
       if (!user) return window.location.href = "login.html";
+      userId = user.uid;
 
-      const userDoc = await getDoc(doc(db, "users", user.uid));
+      const userDoc = await getDoc(doc(db, "users", userId));
       if (userDoc.exists()) {
         const data = userDoc.data();
-        fullNameEl.textContent = data.fullName || "User";
-        matricNumEl.textContent = data.matricNumber || "Not Available";
-        emailEl.textContent = user.email || "No Email";
-        profilePic.src = data.photoURL || "https://i.imgur.com/nq3Z1Yz.png";
+        document.getElementById("name").value = data.fullName || "";
+        document.getElementById("matric").value = data.matricNumber || "";
+        document.getElementById("email").value = user.email;
       }
 
-      // Fetch leaderboard position (mock logic)
-      const scoresRef = collection(db, "cbt_scores");
-      const q = query(scoresRef, orderBy("score", "desc"), limit(10));
-      const topScores = await getDocs(q);
-      const topUserIds = topScores.docs.map(doc => doc.data().userId);
-      if (!topUserIds.includes(user.uid)) {
-        leaderboardInfo.innerHTML = "📉 You are not in the Top 10 yet. Keep practicing!";
+      const q = query(collection(db, "cbt_scores"), where("userId", "==", userId), orderBy("timestamp", "desc"));
+      const qSnap = await getDocs(q);
+      if (!qSnap.empty) {
+        const latest = qSnap.docs[0].data();
+        document.getElementById("scoreDetails").textContent = `Last Score: ${latest.score}/${latest.total}`;
+      } else {
+        document.getElementById("scoreDetails").textContent = "No quiz taken yet.";
       }
     });
 
-    window.logoutUser = function () {
+    window.saveEmail = async () => {
+      const newEmail = document.getElementById("email").value.trim();
+      try {
+        await updateDoc(doc(db, "users", userId), { email: newEmail });
+        alert("Email updated successfully!");
+      } catch (e) {
+        alert("Failed to update email: " + e.message);
+      }
+    };
+
+    window.logoutUser = () => {
       signOut(auth).then(() => window.location.href = "login.html");
     };
-  </script>
-</body>
+  </script></body>
 </html>
