--- a/home.html
+++ b/home.html
@@ -195,7 +195,7 @@
   <!-- 🔥 Firebase Setup -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
     import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
     const firebaseConfig = {
@@ -215,7 +215,7 @@
 
     onAuthStateChanged(auth, async (user) => {
       if (user) {
-        const userDoc = await getDoc(doc(db, "users", user.uid));
+        const userDoc = await getDoc(doc(db, "Users", user.uid)); // ✅ Corrected collection name here
         if (userDoc.exists()) {
           const data = userDoc.data();
           const firstName = data.fullName?.split(" ")[0]?.toUpperCase() || "STUDENT";
